tell compass to use all subfolders

--- a/sprite_icons.scss
+++ b/sprite_icons.scss
@@ -3,6 +3,6 @@
 /* http://compass-style.org/help/tutorials/spriting/sprite-layouts/ */
 $mysprite-layout:smart;
 
-@import "images/*.png";
+@import "images/**/*.png";
 
 @include all-images-sprites;
